...
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <Button
            android:id="@+id/singlePlayer"
            style="@style/SinglePlayerButtonStyle"
            android:layout_width="273dp"
            android:layout_height="53dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="238dp"
            android:text="SinglePlayer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/multiPlayer"
            style="@style/MultiPlayerButtonStyle"
            android:layout_width="273dp"
            android:layout_height="53dp"
            android:layout_marginBottom="94dp"
            android:text="Multiplayer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="105dp"
            android:layout_height="80dp"
            android:layout_marginTop="212dp"
...
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/singlePlayer"
            app:srcCompat="@drawable/ic_multiplayer" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="95dp"
            android:layout_height="0dp"
            android:layout_marginTop="71dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/btnStudy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_name" />

        <Button
...
